# DiningPhilosophers

./: CMakeLists.txt  Coreach.h  DiningPhilosophers.h  DiningPhilosophersEff.h  DiningPhilosophersNew.h  GVAlgorithmClass.h  GroupDining.h  IncSyncBuffer.h  OutputData.h  ReachBoolTest.h  SyncInT.h  System.h  diningTest2.h  main.cpp  readVLTS.h  test.h  twoPhils.h
